[project]
name = "dicom-knowledge-mcp"
version = "0.1.1"
description = "RAG agent MCP based on the dicom standard documentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "mcp==1.10.1",
    "fastmcp==2.10.2",
    "sentence-transformers>=5.0.0",
    "thefuzz>=0.22.1",
    "pandas>=2.3.1",
]

[dependency-groups]
dev = ["html-to-markdown[lxml]>=1.8"]

[tool.uv.sources]
dicom_knowledge_mcp = { path = "src/dicom_knowledge_mcp", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/dicom_knowledge_mcp", "dicom_db"]

[tool.hatch.build.sources]
"src/dicom_knowledge_mcp" = "dicom_knowledge_mcp"
"dicom_db" = "dicom_knowledge_mcp/dicom_db"

[project.scripts]
dicom-knowledge-mcp = "dicom_knowledge_mcp.server:main"
